tests/errors/init_state/partial_init/loop_carried_partial_init_divergence.err.expected
error: at 15:13: [INIT-UsePartiallyInit] In function 'f', block 'exit': variable 'p' is not fully initialized here
    |
 15 |             a = copy p;
    |             ^^^^^^^^^^
